<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingLeft="50dp"
    android:paddingEnd="50dp"
    android:paddingRight="50dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/lobster"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/wetasphalt"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_baseline_perm_identity_24"
        android:drawableTint="@color/midnightblue"
        android:ems="10"
        android:fontFamily="@font/neosons"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text="@null"
        android:textAlignment="center"
        android:textColor="@color/wetasphalt"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:drawableTint="@color/midnightblue"
        android:ems="10"
        android:fontFamily="@font/neosons"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/wetasphalt"
        android:textSize="14sp" />

    <android.widget.Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/buttonlogin"
        android:fontFamily="@font/neosons"
        android:onClick="logIn"
        android:text="@string/login"
        android:textColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <android.widget.Button
                android:id="@+id/createbutton2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttonnobackground"
                android:fontFamily="@font/neosons"
                android:onClick="forgotPassword"
                android:text="@string/forgotpassword"
                android:textColor="@color/wetasphalt"
                android:textSize="12sp" />

            <android.widget.Button
                android:id="@+id/createbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttonnobackground"
                android:fontFamily="@font/neosons"
                android:onClick="newUser"
                android:text="@string/createnewaccount"
                android:textColor="@color/wetasphalt"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>