<resources>
    <string name="app_name">FruzoApp</string>
    <string name="username">Username</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="login">Log In</string>
    <string name="fname">First Name</string>
    <string name="fullname">Full Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="createaccount">New User</string>
...
    <string name="register">Register</string>
    <string name="loading">Loading ..</string>
    <string name="home">Home</string>
    <string name="adminhome">Admin Home</string>
    <string name="customerhome">CUSTOMER HOME</string>
    <string name="adminmenu">ADMIN HOME</string>
    <string name="orderjuice">ORDER JUICE</string>
    <string name="reservetable">RESERVE TABLE</string>
    <string name="addadmins">ADD ADMINS</string>
    <string name="viewadmins">VIEW ADMINS</string>
    <string name="addmenu">ADD MENU</string>
    <string name="viewmenu">VIEW MENU</string>
    <string name="ordernew">ORDER NOW</string>
...
