<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context=".NormalHome">

    <android.widget.Button
        android:id="@+id/button20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/menubtn"
        android:onClick="viewProductHome"
        android:text="@string/orderjuice"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <android.widget.Button
        android:id="@+id/button21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/menubtn"
        android:onClick="goToOrderHistory"
        android:text="@string/orderhistory"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <android.widget.Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/menubtn"
        android:onClick="goToReservations"
        android:text="@string/reservetable"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />
</LinearLayout>